--- a/first.css
+++ b/first.css
@@ -16,8 +16,6 @@
   margin-bottom: 10px;
   padding: 7px 65px;
   box-shadow: 7px 7px 5px rgb(41, 41, 41), -7px -7px 5px rgb(41, 41, 41);
-  /* box-shadow: -7px -7px 5px rgb(41, 41, 41) ;    */
-  /* width: auto; */
 }
 
 .containerrr h2 {
@@ -89,15 +87,15 @@
 }
 input[type="submit"],
 [type="button"] {
-  background-color: black;
-  color: cyan;
+  background-color: green;
+  color: white;
   transition: 0.5s;
 }
 input[type="submit"],
 input[type="button"]:hover {
   cursor: pointer;
-  background-color: cyan;
-  color: rgb(0, 0, 0);
+  background-color: green;
+  color: white;
 }
 input[type="submit"] {
   background-color: black;
@@ -126,6 +124,56 @@ input[type="submit"]:hover {
 .navbar-brand:hover{
     color: white;
     -webkit-text-stroke: 1px white;
+}
+
+/* pop up box  */
+.popup{ 
+  width: 300px;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  /* to make it on the center of the webpage */
+  transform: translate(-50%,-50%); 
+  border-radius: 15px;
+  text-align: center;
+  padding:  0 30px 30px;
+
+
+}
+.popup img{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin-top: -50px;
+  box-shadow: 0 2px 5px rgb(0, 0, 0);
+ 
+}
+
+.popup h2{
+  font-family: cursive;
+
+}
+.popup p{
+  font-size: 17px;
+  font-family: 'Courier New', Courier, monospace;
+
+}
+.popup button{
+  color: white;
+  background-color: red;
+  width: 100%;
+  border-radius: 12px;
+  margin-top: 5px;
+  padding: 7px 0px;
+  cursor: pointer;
+  /* background-color: #6fd649; */
+  font-size: 18px;
+  box-shadow: 0 2px 5px rgb(0, 0, 0);
+  font-weight: bold;
+  
 }
 
 @keyframes alphabet {
